[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/LoveableActions/ActionManager.gd" type="Script" id=1]
[ext_resource path="res://addons/LoveableActions/EditAction.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/LoveableActions/ActionsList.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/LoveableActions/EditMasks.tscn" type="PackedScene" id=4]

[node name="ActionManager" type="TabContainer"]
margin_top = 684.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsList" parent="." instance=ExtResource( 3 )]

[node name="EditAction" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EditMasks" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="edit_new_resource" from="ActionsList" to="." method="_on_edit_new_resource"]
